# pajton-repo

./: .gitignore  AUTHORS.md  CHANGELOG.md  README.md  pyproject.toml  release.config.js  tox.ini
.github/workflows/: format.yml  install.yml  lint.yml  package.yml  pr_title_check.yml  release.yml  tests.yml  type_check.yml
src/pajton_repo/: pajton_repo.py
