[tool.poetry]
name = "pajton-repo"
# Do not touch the version
# Is is edited dynamically by the CI job
# It should remain as 0.0.0
version = "1.4.0"
description = "Prints out Hello World!"
authors = ["Jan Bronicki <janbronicki@gmail.com>",]
readme = "README.md"
# homepage = ""
# repository = ""

[tool.poetry.dependencies]
python = ">=3.9, <4"


[tool.poetry.group.format.dependencies]
black = "^23.3.0"
isort = "^5.12.0"


[tool.poetry.group.dev.dependencies]
tox = "^4.6.4"


[tool.poetry.group.type_check.dependencies]
mypy = "^1.4.1"
types-all = "^1.0.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-mock = "^3.11.1"
pytest-cov = "^4.1.0"
toml = "^0.10.2"


[tool.poetry.group.lint.dependencies]
pylint = "^2.17.4"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
